# partio

contrib/: CMakeLists.txt
contrib/cmake/: FindMaya.cmake
contrib/partio4Maya/: CMakeLists.txt  partioEmitter.cpp  partioInstancer.cpp
contrib/partio4USD/: CMakeLists.txt
contrib/partio4USD/fileFormat/: constants.inl
contrib/partio4USD/primWriter/: CMakeLists.txt  primWriter.cpp
